fixed active class in header

--- a/portfolio.html
+++ b/portfolio.html
@@ -80,13 +80,13 @@
               <ul class="header__nav-ul">
                 <li class="header__nav-li">
                   <a
-                    class="header__nav-link header__nav-link--active"
+                    class="header__nav-link"
                     href="./index.html"
                     >Студія</a
                   >
                 </li>
                 <li class="header__nav-li">
-                  <a class="header__nav-link" href="./portfolio.html"
+                  <a class="header__nav-link header__nav-link--active" href="./portfolio.html"
                     >Портфоліо</a
                   >
                 </li>
