fixed mobile view

--- a/portfolio.html
+++ b/portfolio.html
@@ -23,6 +23,7 @@
   </head>
   <body class="page__body page__body--scroll-custom">
     <script src="./js/mobile-header.js"></script>
+    <script src="./js/utils.js"></script>
 
     <!-- MOBILE HEADER -->
     <div class="page">
@@ -72,7 +73,7 @@
       <header class="header">
         <div class="header__container container">
           <div class="header__left">
-            <div class="header__logo-text">
+            <div class="header__logo-text" onclick="">
               <span class="header__logo-part">Web</span>
               <span class="header__logo-part">Studio</span>
             </div>
