added filter for portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -80,14 +80,12 @@
             <nav class="header__navigation">
               <ul class="header__nav-ul">
                 <li class="header__nav-li">
-                  <a
-                    class="header__nav-link"
-                    href="./index.html"
-                    >Студія</a
-                  >
+                  <a class="header__nav-link" href="./index.html">Студія</a>
                 </li>
                 <li class="header__nav-li">
-                  <a class="header__nav-link header__nav-link--active" href="./portfolio.html"
+                  <a
+                    class="header__nav-link header__nav-link--active"
+                    href="./portfolio.html"
                     >Портфоліо</a
                   >
                 </li>
@@ -134,7 +132,7 @@
           <div class="container">
             <ul class="section--portfolio__filter-buttons">
               <li>
-                <button class="filter-buttons__filter-button">Всі</button>
+                <button class="filter-buttons__filter-button active">Всі</button>
               </li>
               <li>
                 <button class="filter-buttons__filter-button">Веб-сайт</button>
@@ -352,6 +350,8 @@
           </div>
         </section>
       </main>
+      <script src="./js/filter-buttons.js"></script>
+      
       <footer class="footer">
         <div class="container">
           <div class="footer__logo-sct">
